# echion

./: %%(pid).echion  .flake8  .gitignore  .gitmodules  CMakeLists.txt  README.md  amalgamate.py  amalgamate_cpp.py  analyze.py  basic.py  build_deps.sh  compile_commands.json  echion_amalgamated.cc  pyproject.toml  setup.py
.github/workflows/: benchmarks.yml  build_release.yml  check_build.yml  checks.yml  cibw_before_all.sh  clang-tidy.yml  release.yml  test.yml  tests.yml
basic/: exports.map  lib.cpp  lib.h  main.cpp  test.cpp
echion/: __init__.py  __main__.py  cache.cpp  cache.h  cfunction.h  config.cc  config.h  core.pyi  coremodule.cc  danger.cc  danger.h  errors.h  frame.cc  frame.h  greenlets.cc  greenlets.h  interp.cc  interp.h  long.cc  long.h  memory.cc  memory.h  mirrors.cc  mirrors.h  module.py  mojo.h  page_cache.h  page_cache_integration.cc  page_cache_integration.h  render.cc  render.h  signals.cc  signals.h  stack_chunk.cc  stack_chunk.h  stacks.cc  stacks.h  state.h  strings.cc  strings.h  (+9 more)
echion/bootstrap/: __init__.py  attach.py  preload.py  sitecustomize.py
echion/cpython/: tasks.h
echion/monkey/: asyncio.py  gevent.py  threading.py
scripts/: benchmark.py  build_libunwind.sh  cformat.sh
test/: mock_copy_memory.cpp  test.cpp  test_frame_varint.cpp  test_sigprof_handler_locks.cpp  test_string_table.cpp  test_thread_info.cpp  test_timing.cpp  test_vm_linux.cpp  util.h
tests/: setup_test_extensions.py  target.py  target_async.py  target_async_coroutines.py  target_async_deadlock.py  target_async_executor.py  target_async_generator.py  target_async_not_awaited.py  target_async_with.py  target_asyncio_as_completed.py  target_asyncio_idle_wait.py  target_asyncio_recursive_on_cpu_coros.py  target_asyncio_recursive_on_cpu_tasks.py  target_asyncio_wait.py  target_asyncio_within_function.py  target_attach.py  target_bytecode.py  target_cpu.py  target_fault_handler_enable_disable.py  target_fib.py  target_frame_benchmark.py  target_gather.py  target_gather_coroutines.py  target_gather_coroutines_deep.py  target_generators.py  target_mem.py  target_more_than_one_module.py  target_more_than_one_module_dep.py  target_on_cpu_c_function.py  target_whatever.py  task_modifier.c  test_async_with_test_extension.py  test_asyncio.py  test_asyncio_as_completed.py  test_asyncio_async_generator.py  test_asyncio_context_manager.py  test_asyncio_coroutines.py  test_asyncio_deadlock.py  test_asyncio_executor.py  test_asyncio_fib.py  (+20 more)
